<resources>
    <string name="app_name">FlashCard</string>
    <string name="log_in">Log In</string>
    <string name="enter_username">Enter Username</string>
    <string name="user">User</string>
    <string name="password">Pass</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="generate_10_random_problems">Generate 10 Random Problems</string>
    <string name="your_answer">Your Answer:</string>
    <string name="type_your_answer">Type Your Answer</string>
    <string name="restart">Restart</string>
</resources>