<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardGame">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/num1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text=""
            android:textSize="100sp" />

        <LinearLayout
            android:id="@+id/Second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/num1"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:padding="15dp"
                android:text=""
                android:textSize="80sp" />

            <TextView
                android:id="@+id/num2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="80dp"
                android:gravity="center"
                android:text=""
                android:textSize="100sp" />
        </LinearLayout>

        <Button
            android:id="@+id/generator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Second"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/generate_10_random_problems"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/generator"
            android:layout_margin="10dp"
            android:id="@+id/third"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#C6DEF7"
                android:elevation="5dp"
                android:ems="10"
                android:hint="@string/type_your_answer"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:padding="20dp"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/submit_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/submit"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/third"
            android:gravity="center"
            android:id="@+id/restart"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/restart"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>